Concluindo refatoração clean arch do módulo de pedidos